# JupyterHomework

./: .gitignore  hometask_pandas.ipynb  homework_3_final.ipynb  pyproject.toml
