[tool.poetry]
name = "jupyterhomework"
version = "0.1.0"
description = ""
authors = ["Bogdan Martyshevskiy <vigoroous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.8"
vk-api = "^11.9.6"
python-dotenv = "^0.19.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
